# rust-simple-request-comparison

./: Cargo.toml
src/: main_async.rs  main_std.rs
